# engine2d

./: .gitignore  CMakeLists.txt  analysis.txt  analysis1.txt  analysis2.txt
assets/shaders/: batched.vert  blue_paper.vert  light.frag  rect.vert
asteroids/: CMakeLists.txt  main.cpp
cmake/: FindGperftools.cmake  FindSDL2TTF.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
engine/: CMakeLists.txt  Core.h  Graphics.h  Math.h  Physics.h  Utils.h
engine/core/: Camera.cpp  Camera.h  EventDispatcher.cpp  EventDispatcher.h  GameEngine.h  IEventObserver.h  IGameScene.h  IRenderer.h  IResourceLoader.h  IWindow.h  InputHandler.cpp  InputHandler.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ServiceInitializer.h  ServiceProvider.cpp  ServiceProvider.h  Transform.cpp  Transform.h
engine/graphics/: Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  BatchObject.cpp  BatchObject.h  Font.h  IResource.h  InstancedBatchObject.cpp  InstancedBatchObject.h  Object.cpp  Object.h  RenderLayer.cpp  RenderLayer.h  Renderer.cpp  Renderer.h  SDL2Window.cpp  SDL2Window.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TexturedObject.cpp  TexturedObject.h  VertexArrayObject.cpp  VertexArrayObject.h  WireObject.cpp  WireObject.h
engine/include/: Engine.h  Graphics.h  Math.h  Physics.h  Sounds.h  UI.h
engine/include/core/: EventDispatcher.h  GameEngine.h  IEventObserver.h  IGameScene.h  IWindow.h  InputHandler.h  ServiceProvider.h
engine/include/graphics/: AnimationController.h  Font.h  Object.h  OpenGLRenderer.h  Renderer.h  Texture.h  TexturedObject.h  VertexArrayObject.h  Window.h  WireObject.h
engine/include/math/: Rectangle.h  Vector.h
engine/include/physics/: PhysicObject.h
engine/include/ui/: Button.h  UIBuilder.h
engine/include/utils/: CallbackTimer.h
engine/physics/: CollisionDetector.cpp  CollisionDetector.h  PhysicObject.h
engine/sounds/: Sound.cpp  Sound.h  SoundPlayer.cpp  SoundPlayer.h
engine/src/core/: Camera.cpp  Engine.cpp  EventDispatcher.cpp  IEventObserver.cpp  InputHandler.cpp  ResourceManager.cpp  SceneManager.cpp  ServiceProvider.cpp
engine/src/graphics/: Animation.cpp  AnimationController.cpp  Object.cpp  OpenGLRenderer.cpp  RenderLayer.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  TextRenderer.cpp  Texture.cpp  TexturedObject.cpp  Tile.cpp  VertexArrayObject.cpp  Window.cpp  WireObject.cpp
engine/src/math/: Rectangle.cpp  Vector.cpp
engine/src/physics/: CollisionDetector.cpp  DynamicPhysicsObject.cpp  PhysicObject.cpp
engine/src/sounds/: SoundPlayer.cpp
engine/src/ui/: Button.cpp  TextLabel.cpp  UIBuilder.cpp
engine/src/utils/: CallbackTimer.cpp  Utils.cpp
engine/ui/: Button.cpp  Button.h  TextLabel.cpp  TextLabel.h  UIBuilder.cpp  UIBuilder.h
engine/utils/: CallbackTimer.cpp  CallbackTimer.h  FPSCounter.h  Utils.cpp  Utils.h
examples/: CMakeLists.txt
examples/animation-demo/: CMakeLists.txt
examples/animation-demo/src/: main.cpp
examples/asteroid-game/: CMakeLists.txt
examples/asteroid-game/src/: main.cpp
examples/asteroid-game/src/game/: AsteroidManager.h  AsteroidObject.h  AsteroidPrototype.h  EffectFactory.h  EffectManager.h  EffectObject.h  EffectPrototype.h  EnemyManager.cpp  EnemyManager.h  EnemyObject.cpp  EnemyObject.h  HUDInterface.cpp  HUDInterface.h  MenuScene.h  Player.h  PlayerShip.cpp  PowerupFactory.cpp  PowerupFactory.h  PowerupManager.h  PowerupObject.cpp  PowerupObject.h  PowerupPrototype.h  ProjectileObject.cpp  ProjectileObject.h  ProjectilePool.h  ScoreManager.h  Upgrade.h  UpgradeManager.cpp  UpgradeManager.h
examples/asteroid-game/src/scenes/: GameOverScene.h  GameScene.h  MenuScene.h  ScoreScene.h
examples/batch-renderer/: CMakeLists.txt
examples/batch-renderer/src/: BatchInstance.h  BatchedObject.h  main.cpp
shaders/: batched.vert  blue_paper.frag  blue_paper.vert  circle_shadow.frag  light.frag  light.vert  rect.frag  rectTextured.vert  tilemap.frag  tilemap.vert
src/UI/: Button.cpp  Button.h  TextLabel.cpp  TextLabel.h  UIBuilder.cpp
src/batch_renderer/: BatchInstance.cpp  BatchedObject.cpp  BatchedObject.h  main.cpp
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  EventDispatcher.cpp  EventObserver.cpp  EventObserver.h  IEventObserver.cpp  IRenderer.h  IResourceLoader.h  InputHandler.cpp  InputHandler.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ScoreManager.cpp  ScoreManager.h  ServiceInitializer.h  ServiceProvider.cpp  Transform.h  Upgrade.cpp  UpgradeTree.cpp  UpgradeTree.h
src/examples/: AnimatedObject.cpp  EventsExample.cpp  GameScene.h  HUDInterface.h  MenuScene.h  SceneExample.cpp  ScoreScene.h
src/game/: AsteroidBuilder.cpp  AsteroidBuilder.h  AsteroidFactory.cpp  AsteroidFactory.h  AsteroidManager.cpp  AsteroidManager.h  AsteroidObject.cpp  AsteroidObject.h  AsteroidPrototype.cpp  AsteroidPrototype.h  EffectFactory.cpp  EffectManager.cpp  EffectManager.h  EffectObject.cpp  EffectObject.h  EffectPrototype.cpp  EffectPrototype.h  EnemyManager.h  EnemyObject.h  GameEvent.cpp  GameEvent.h  GameMaster.cpp  GameMaster.h  MenuScene.cpp  MenuScene.h  Player.cpp  Player.h  PlayerShip.h  PowerupFactory.h  PowerupManager.cpp  PowerupManager.h  PowerupObject.h  PowerupPrototype.cpp  PowerupPrototype.h  ProjectileObject.h  ProjectilePool.cpp  ProjectilePool.h  main.cpp
src/graphics/: Animation.cpp  Animation.h  AnimationController.cpp  Object.cpp  Object.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderLayer.cpp  RenderLayer.h  Renderer.cpp  Renderer.h  Resource.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TexturedObject.cpp  TexturedObject.h  Tile.cpp  Tile.h  VertexArrayObject.cpp  VertexArrayObject.h  Window.cpp  Window.h  WireObject.cpp  WireObject.h
src/math/: ObjectTransform.cpp  ObjectTransform.h  Rectangle.cpp  Vector.cpp  Vector.h
src/physics/: CollisionDetector.cpp  CollisionDetector.h  DynamicPhysicsObject.cpp  DynamicPhysicsObject.h  PhysicObject.cpp
tests/: TestUtils.cpp
(+6 files in other folders)
