# Examples CMakeLists.txt - все примеры включены безусловно

# Asteroid Game - полная игра с менеджерами и объектами
add_subdirectory(asteroid-game)

# Animation Demo - демонстрация анимации
add_subdirectory(animation-demo)

# Batch Renderer Demo - демонстрация батч рендеринга
add_subdirectory(batch-renderer)
